[gd_scene load_steps=4 format=3 uid="uid://cclmwir3uy1gw"]

[ext_resource type="Script" uid="uid://c25xxvn6llpyj" path="res://level/gameplay.gd" id="1_5p71y"]
[ext_resource type="Texture2D" uid="uid://heix7b7hf8sk" path="res://images/teal.png" id="2_jcfem"]
[ext_resource type="Theme" uid="uid://b2cw6p6e6sgsj" path="res://ui/default_theme.tres" id="3_jcfem"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p71y")

[node name="TealUIBG" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.309804, 0.309804, 0.0431373, 0.129412)
position = Vector2(640, 353)
scale = Vector2(4.2, 2.44667)
texture = ExtResource("2_jcfem")

[node name="OptionsContainer" type="VBoxContainer" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = -1
anchor_left = 0.426
anchor_right = 0.426
offset_left = -129.87
offset_top = 81.0
offset_right = 129.13
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="OptionsTitle" type="RichTextLabel" parent="OptionsContainer"]
layout_mode = 2
text = "Game Options"
fit_content = true
horizontal_alignment = 1

[node name="Back" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Back to Game"

[node name="Load_Save" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Save/Load Progress"

[node name="Options" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Options"

[node name="MainMenuGo" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="CloseOptions" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Close Options"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.951
anchor_right = 0.5
anchor_bottom = 0.951
offset_left = -365.0
offset_top = -19.72
offset_right = 362.0
offset_bottom = 20.28
theme_override_constants/separation = 20

[node name="Money" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Money: "

[node name="Research" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "RP: "

[node name="Days" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "YYYY/MM/DD: "

[node name="OptionsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ConfirmwindowLeave" type="Window" parent="."]
title = "Are you sure?"
initial_position = 1
size = Vector2i(300, 200)
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="ConfirmwindowLeave"]
offset_right = 284.0
offset_bottom = 115.0
text = "Are you sure to leave?

You may have some unsaved progress."

[node name="ConfirmLeave" type="Button" parent="ConfirmwindowLeave"]
anchors_preset = -1
anchor_left = 0.807
anchor_top = 0.647
anchor_right = 0.807
anchor_bottom = 0.647
offset_left = -53.1
offset_top = -20.4
offset_right = 52.9
offset_bottom = 20.6
text = "Yes"

[node name="GoBack" type="Button" parent="ConfirmwindowLeave"]
anchors_preset = -1
anchor_left = 0.623
anchor_top = 0.647
anchor_right = 0.623
anchor_bottom = 0.647
offset_left = -105.9
offset_top = -20.4
offset_right = 0.0999908
offset_bottom = 20.6
text = "No"

[node name="GameplayComponents" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.212
anchor_right = 0.212
offset_left = -122.36
offset_top = 50.0
offset_right = 124.64
offset_bottom = 266.0
theme_override_constants/separation = 6

[node name="CreateCPU" type="Button" parent="GameplayComponents"]
layout_mode = 2
text = "Create CPU"

[node name="Research" type="Button" parent="GameplayComponents"]
layout_mode = 2
text = "Research"

[node name="CheckMarket" type="Button" parent="GameplayComponents"]
layout_mode = 2
text = "Check Market Demands"

[node name="FabPartners" type="Button" parent="GameplayComponents"]
layout_mode = 2
text = "Fab Partners"

[node name="CompanyReport" type="Button" parent="GameplayComponents"]
layout_mode = 2
text = "Company Report"

[node name="Close" type="Button" parent="GameplayComponents"]
layout_mode = 2
text = "Close Popup"

[node name="Actions" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057
anchor_right = 0.057
offset_left = -33.96
offset_top = 20.0
offset_right = 31.04
offset_bottom = 51.0
text = "Actions
"

[node name="CreateCPUCoreUI" type="PanelContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_right = 0.5
offset_left = -219.0
offset_top = 14.0
offset_right = 207.75
offset_bottom = 363.0

[node name="CreateCPUVB" type="VBoxContainer" parent="CreateCPUCoreUI"]
clip_children = 2
layout_mode = 2
theme = ExtResource("3_jcfem")

[node name="HBoxContainer" type="HBoxContainer" parent="CreateCPUCoreUI/CreateCPUVB"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CreateCPUTitle" type="RichTextLabel" parent="CreateCPUCoreUI/CreateCPUVB/HBoxContainer"]
layout_mode = 2
text = "Create CPU"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="CreateCPUCoreUI/CreateCPUVB/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 350

[node name="CloseCPUCreation" type="Button" parent="CreateCPUCoreUI/CreateCPUVB/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="GridContainer" type="GridContainer" parent="CreateCPUCoreUI/CreateCPUVB"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer"]
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="NameCPU_Label" type="RichTextLabel" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Brand Name"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="NameCPU_Holder" type="RichTextLabel" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer"]
layout_mode = 2
fit_content = true
autowrap_mode = 0

[node name="CPUChangeName_Btn" type="Button" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Change Brand Name"

[node name="SeriesLabel" type="RichTextLabel" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Chip Series Name"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SeriesLabel_Holder" type="RichTextLabel" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer"]
layout_mode = 2
fit_content = true
autowrap_mode = 0

[node name="SeriesChangeName_Btn2" type="Button" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Change Brand Name"

[node name="VBoxContainer2" type="VBoxContainer" parent="CreateCPUCoreUI/CreateCPUVB/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameBrandCPU" type="Window" parent="."]
title = "Name the Product"
initial_position = 1
size = Vector2i(280, 180)
visible = false
unresizable = true
always_on_top = true
popup_window = true

[node name="WINLABEL_NEWCPU" type="RichTextLabel" parent="NameBrandCPU"]
offset_top = 1.0
offset_right = 279.0
offset_bottom = 32.0
text = "Name the Product's Brand"

[node name="ProductUserEntry_B" type="LineEdit" parent="NameBrandCPU"]
offset_left = 4.0
offset_top = 30.0
offset_right = 276.0
offset_bottom = 61.0
max_length = 15

[node name="clear_textbox_B" type="Button" parent="NameBrandCPU"]
anchors_preset = -1
anchor_top = 0.45
anchor_bottom = 0.45
offset_left = 4.0
offset_top = -10.0
offset_right = 134.0
offset_bottom = 23.0
text = "Clear"

[node name="Cancel_prod_name_B" type="Button" parent="NameBrandCPU"]
anchors_preset = -1
anchor_top = 0.45
anchor_bottom = 0.45
offset_left = 6.0
offset_top = 56.0
offset_right = 136.0
offset_bottom = 89.0
text = "Cancel"

[node name="proceed_prod_name_B" type="Button" parent="NameBrandCPU"]
anchors_preset = -1
anchor_top = 0.45
anchor_bottom = 0.45
offset_left = 145.0
offset_top = 56.0
offset_right = 275.0
offset_bottom = 89.0
text = "OK"

[node name="NameSeriesCPU" type="Window" parent="."]
auto_translate_mode = 1
title = "Name the Product"
initial_position = 1
size = Vector2i(280, 180)
visible = false
unresizable = true
always_on_top = true
popup_window = true

[node name="WINLABEL_NEWCPU" type="RichTextLabel" parent="NameSeriesCPU"]
offset_top = 1.0
offset_right = 279.0
offset_bottom = 32.0
text = "Name the Product's Series"

[node name="ProductUserEntry_S" type="LineEdit" parent="NameSeriesCPU"]
offset_left = 4.0
offset_top = 30.0
offset_right = 276.0
offset_bottom = 61.0
max_length = 15

[node name="clear_textbox_S" type="Button" parent="NameSeriesCPU"]
anchors_preset = -1
anchor_top = 0.45
anchor_bottom = 0.45
offset_left = 4.0
offset_top = -10.0
offset_right = 134.0
offset_bottom = 23.0
text = "Clear"

[node name="Cancel_prod_name_S" type="Button" parent="NameSeriesCPU"]
anchors_preset = -1
anchor_top = 0.45
anchor_bottom = 0.45
offset_left = 6.0
offset_top = 56.0
offset_right = 136.0
offset_bottom = 89.0
text = "Cancel"

[node name="proceed_prod_nameS" type="Button" parent="NameSeriesCPU"]
anchors_preset = -1
anchor_top = 0.45
anchor_bottom = 0.45
offset_left = 145.0
offset_top = 56.0
offset_right = 275.0
offset_bottom = 89.0
text = "OK"

[connection signal="pressed" from="OptionsContainer/MainMenuGo" to="." method="_on_main_menu_go_pressed"]
[connection signal="pressed" from="OptionsContainer/CloseOptions" to="." method="_on_close_options_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionsButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ConfirmwindowLeave/ConfirmLeave" to="." method="_on_confirm_leave_pressed"]
[connection signal="pressed" from="ConfirmwindowLeave/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="GameplayComponents/CreateCPU" to="." method="_on_create_cpu_pressed"]
[connection signal="pressed" from="GameplayComponents/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Actions" to="." method="_on_actions_pressed"]
[connection signal="pressed" from="CreateCPUCoreUI/CreateCPUVB/HBoxContainer/CloseCPUCreation" to="." method="_on_close_cpu_creation_pressed"]
[connection signal="pressed" from="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer/CPUChangeName_Btn" to="." method="_on_cpu_change_name_btn_pressed"]
[connection signal="pressed" from="CreateCPUCoreUI/CreateCPUVB/GridContainer/VBoxContainer/SeriesChangeName_Btn2" to="." method="_on_series_change_name_btn_2_pressed"]
[connection signal="close_requested" from="NameBrandCPU" to="." method="_on_name_brand_cpu_close_requested"]
[connection signal="pressed" from="NameBrandCPU/clear_textbox_B" to="." method="_on_clear_textbox_b_pressed"]
[connection signal="pressed" from="NameBrandCPU/Cancel_prod_name_B" to="." method="_on_cancel_prod_name_b_pressed"]
[connection signal="close_requested" from="NameSeriesCPU" to="." method="_on_name_series_cpu_close_requested"]
[connection signal="pressed" from="NameSeriesCPU/clear_textbox_S" to="." method="_on_clear_textbox_s_pressed"]
[connection signal="pressed" from="NameSeriesCPU/Cancel_prod_name_S" to="." method="_on_cancel_prod_name_s_pressed"]
